Nosso Programa/Separado em Arquivos/compiling_error.txt
C:\Users\matheus\Trabalho-CEII\Nosso Programa\Separado em Arquivos\main.cpp: In function 'int main()':
C:\Users\matheus\Trabalho-CEII\Nosso Programa\Separado em Arquivos\main.cpp:73:30: error: 'numero' was not declared in this scope
       netlist[ne].a=numero(na);
                              ^
C:\Users\matheus\Trabalho-CEII\Nosso Programa\Separado em Arquivos\main.cpp:79:30: error: 'numero' was not declared in this scope
       netlist[ne].a=numero(na);
                              ^
C:\Users\matheus\Trabalho-CEII\Nosso Programa\Separado em Arquivos\main.cpp:87:30: error: 'numero' was not declared in this scope
       netlist[ne].a=numero(na);
                              ^
C:\Users\matheus\Trabalho-CEII\Nosso Programa\Separado em Arquivos\main.cpp:247:23: error: 'resolversistema' was not declared in this scope
   if (resolversistema()) {
                       ^
